--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             </div>
         
             <div class="color-card">
-                <img src='https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.bentleylongisland.com%2F2023-bentley-continental-gt-v8-convertible-v8-c-3209%2F&psig=AOvVaw2aVIvSDEnS-P_BSHbXwG6K&ust=1735487064096000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCMjCkabnyooDFQAAAAAdAAAAABAk' alt='Dark Sapphire Metallic Bentley Brooklands' class='color-image' onerror="this.parentElement.innerHTML='<div class=\'error-placeholder\'>Image not available</div>'">
+                <img src='https://www.bentleylongisland.com/imagetag/3209/7/l/New-2023-Bentley-Continental-GT-V8-Convertible-V8-1681755024.jpg' alt='Dark Sapphire Metallic Bentley Brooklands' class='color-image' onerror="this.parentElement.innerHTML='<div class=\'error-placeholder\'>Image not available</div>'">
                 <div class="color-info">
                     <div class="color-preview" style="background-color: #0B1130"></div>
                     <div class="color-name">Dark Sapphire Metallic</div>
